# kaka_project

./: camera.launch  camera.launch~  kaka.launch  kaka.launch~  kaka_calibration.launch  kaka_test.launch  kaka_test.launch~  kaka_vision.launch  kaka_vision.launch~  vision_test.launch~
devel/: .rosinstall  _setup_util.py  setup.sh
devel/include/kaka_drive_pkg/: JointMsg.h
devel/include/kaka_interface_pkg/: InterfaceCtrl.h
devel/include/kaka_vision_pkg/: VisionMsg.h
devel/lib/kaka_brain_pkg/: kaka_brain_node
devel/lib/kaka_drive_pkg/: kaka_drive_node
devel/lib/kaka_eyetohand_calibration_pkg/: kaka_eyetohand_calibration_node
devel/lib/kaka_gripper_pkg/: kaka_gripper_node
devel/lib/kaka_serial_pkg/: kaka_serial_node
devel/lib/kaka_test_pkg/: kaka_test_node
devel/lib/kaka_vision_pkg/: kaka_vision_node
devel/lib/pkgconfig/: kaka_brain_pkg.pc  kaka_control_pkg.pc  kaka_description_pkg.pc  kaka_drive_pkg.pc  kaka_eyetohand_calibration_pkg.pc  kaka_gripper_pkg.pc  kaka_interface_pkg.pc  kaka_serial_pkg.pc  kaka_test_pkg.pc  kaka_vision_pkg.pc  rviz_teleop_commander.pc
devel/lib/python2.7/dist-packages/kaka_drive_pkg/msg/: _JointMsg.py
devel/lib/python2.7/dist-packages/kaka_interface_pkg/msg/: _InterfaceCtrl.py  __init__.py
devel/lib/python2.7/dist-packages/kaka_vision_pkg/msg/: _VisionMsg.py  __init__.py
devel/share/common-lisp/ros/kaka_drive_pkg/msg/: JointMsg.lisp  _package.lisp  _package_JointMsg.lisp  kaka_drive_pkg-msg.asd
devel/share/common-lisp/ros/kaka_interface_pkg/msg/: InterfaceCtrl.lisp  _package.lisp  _package_InterfaceCtrl.lisp  kaka_interface_pkg-msg.asd
devel/share/common-lisp/ros/kaka_vision_pkg/msg/: VisionMsg.lisp  _package.lisp  _package_VisionMsg.lisp  kaka_vision_pkg-msg.asd
devel/share/kaka_brain_pkg/cmake/: kaka_brain_pkgConfig.cmake
devel/share/kaka_control_pkg/cmake/: kaka_control_pkgConfig.cmake
devel/share/kaka_description_pkg/cmake/: kaka_description_pkgConfig.cmake
devel/share/kaka_drive_pkg/cmake/: kaka_drive_pkg-msg-extras.cmake  kaka_drive_pkg-msg-paths.cmake  kaka_drive_pkgConfig.cmake
devel/share/kaka_eyetohand_calibration_pkg/cmake/: kaka_eyetohand_calibration_pkgConfig.cmake
devel/share/kaka_gripper_pkg/cmake/: kaka_gripper_pkgConfig.cmake
devel/share/kaka_interface_pkg/cmake/: kaka_interface_pkg-msg-paths.cmake  kaka_interface_pkgConfig.cmake
devel/share/kaka_serial_pkg/cmake/: kaka_serial_pkgConfig.cmake
devel/share/kaka_test_pkg/cmake/: kaka_test_pkgConfig.cmake
devel/share/kaka_vision_pkg/cmake/: kaka_vision_pkgConfig.cmake
devel/share/rviz_teleop_commander/cmake/: rviz_teleop_commanderConfig.cmake
src/kaka_brain_pkg/: CMakeLists.txt
src/kaka_brain_pkg/src/: KakaBrain.cpp  KakaBrain.h
src/kaka_control_pkg/: .setup_assistant  CMakeLists.txt
src/kaka_control_pkg/config/: fake_controllers.yaml  joint_limits.yaml  kaka.srdf  kaka_controllers.yaml  ompl_planning.yaml
src/kaka_control_pkg/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  kaka_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/kaka_description_pkg/: CMakeLists.txt  urdf.rviz
src/kaka_description_pkg/launch/: view_kaka.launch~
src/kaka_description_pkg/urdf/: kaka.xacro~
src/kaka_description_pkg/urdf/backup/: kaka.xacro
src/kaka_drive_pkg/: CMakeLists.txt  CMakeLists.txt~  package.xml~
src/kaka_drive_pkg/msg/: JointMsg.msg
src/kaka_drive_pkg/src/: KakaDrive.cpp  KakaDrive.h  KakaDrive.h~
src/kaka_eyetohand_calibration_pkg/: CMakeLists.txt  config.rviz  package.xml~  plugin_description.xml~
src/kaka_eyetohand_calibration_pkg/src/: KakaCalibMethod.cpp  KakaCalibMethod.h  KakaCalibration.cpp  KakaCalibration.h
src/kaka_gripper_pkg/: CMakeLists.txt
src/kaka_gripper_pkg/src/: KakaGripper.cpp  KakaGripper.h
src/kaka_interface_pkg/: CMakeLists.txt  package.xml~  plugin_description.xml  plugin_description.xml~
src/kaka_interface_pkg/msg/: InterfaceCtrl.msg
src/kaka_interface_pkg/src/: KakaInterface.cpp  KakaInterface.h
src/kaka_serial_pkg/: CMakeLists.txt
src/kaka_serial_pkg/src/: KakaProtocal.cpp  KakaProtocal.h  KakaSerial.cpp  KakaSerial.h
src/kaka_test_pkg/: CMakeLists.txt  package.xml
src/kaka_test_pkg/src/: KakaTest.cpp  KakaTest.h
src/kaka_vision_pkg/: CMakeLists.txt  camera.rviz  config.rviz
src/kaka_vision_pkg/msg/: VisionMsg.msg
src/kaka_vision_pkg/src/: KakaCloudMethod.cpp  KakaCloudMethod.h  KakaCloudTransform.cpp  KakaCloudTransform.h  KakaCoordinate.cpp  KakaCoordinate.h  KakaVision.cpp  KakaVision.h
